# benchmarks

./: .gitignore  Makefile  README.md
.github/workflows/: python_worflow.yml  v_workflow.yml
python/: bm.py  pyproject.toml
python/benchamarks/: __init__.py
python/benchamarks/bm/: __init__.py  knapsack_backtracking.py  knapsack_branching.py  knapsack_comm.py  knapsack_dp.py  knapsack_greedy.py
python/tests/: test_knapsack_backtracking.py  test_knapsack_branching.py  test_knapsack_dp.py  test_knapsack_greedy.py
vlang/: changelog.json  main  main.v  result.json  result_deb.json  result_prod.json
vlang/bm_datatype/: bst_benchmark.v
vlang/gbenchmark/: gbenchmark.v
vlang/vlangbm/: vbenchmark.v
