[tool.poetry]
name = "benchamarks"
version = "0.1.0"
description = ""
authors = ["Vincenzo Palazzo <vincenzopalazzodev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cpstl = "^0.0.6"
google-benchmark = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
typed-ast = "^1.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
